Closed Bug 1631312 Opened 5 years ago Closed 5 years ago

WebRender compositor is disabled on Windows

Categories

(Core :: Graphics: WebRender, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox76 + fixed
firefox77 + fixed

People

(Reporter: sotaro, Assigned: jrmuizel)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Bug 1630371 disabled webrender native compositor on all window PCs. "if (!gfxVars::UseWebRenderDCompWin()) {" is called before "gfxVars::SetUseWebRenderDCompWin(true)".

Regressed by: 1630629
Has Regression Range: --- → yes
Keywords: regression
Assignee: nobody → sotaro.ikeda.g

[Tracking Requested - why for this release]: I accidentally disabled DirectComposition everywhere in bug 1630629

Bug 1630629 moved the check UseWebRenderDCompWin before it had been
initialized. This moves it below so that DirectComposition isn't
disabled everywhere.

Assignee: sotaro.ikeda.g → jmuizelaar
Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/20aad8c2fc42 Move the check for UseWebRenderDCompWin(). r=sotaro
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Priority: -- → P1

This was fixed by backout for 76.

Regressions: 1617524
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: