Bug 1631312. Move the check for UseWebRenderDCompWin(). r=sotaro

Bug 1630629 moved the check UseWebRenderDCompWin before it had been
initialized. This moves it below so that DirectComposition isn't
disabled everywhere.

Differential Revision: https://phabricator.services.mozilla.com/D71498